<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.ActivityA"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



    <Button
        android:id="@+id/event"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/event_subscribe" />

    <Button
        android:id="@+id/event_sticky"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/event_sticky_subscribe" />
    <Button
        android:id="@+id/image_request"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/imjage_request"/>
    <Button
        android:id="@+id/intent_request"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/intent_request"/>
    <Button
        android:id="@+id/intent_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/intent_recyclerview"/>
    <Button
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/viewPager_test"/>
    <Button
        android:id="@+id/bga_refresh"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/bgarefreshlayouttest"/>
    <Button
        android:id="@+id/time"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/timechoose"/>
    <Button
        android:id="@+id/citypicker"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="城市选择器"/>
    <Button
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="测试日历"/>
            <Button
                android:id="@+id/word"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="语音识别"/>
            <Button
                android:id="@+id/panel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="底部弹出"/>
        </LinearLayout>
    </ScrollView>
    <TextView
        android:id="@+id/show_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <ImageView
        android:id="@+id/show_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </FrameLayout>
</LinearLayout>